tested routes create swaager.yaml for task
